feat: item domain 에 구매로 인한 아이템 수량 감소 행동 추가